--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -1,1 +1,64 @@
-.menu-background
+@mixin flex-box-a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+$color: rgba(255, 255, 255, 0.815);
+
+.menu-background{
+    background: url(../image/menu.jpg);
+    height: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    padding-top: 160px;
+   
+    &::after{
+        content: '';
+        left: 0;
+        right: 0;
+        bottom: 0;
+        position: absolute;
+        background: #161c2d3f;
+        z-index: -1;
+        height: 100px;
+    }
+
+    .menu-content{
+      @include flex-box-a();
+      .menu-text{
+       h3{
+        font-size: 23px;
+        font-weight: 600;
+        color: $color;
+        text-align: center;
+        margin-bottom: 20px;
+       }
+
+     h1{
+        margin-bottom: 50px;
+        color: #fff;
+        font-size: 30px;
+     }
+
+      }
+
+    }
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
