--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap");
+.menu-background {
+  background: url(../image/menu.jpg);
+  height: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+  padding-top: 160px;
+}
+.menu-background::after {
+  content: "";
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  background: rgba(22, 28, 45, 0.2470588235);
+  z-index: -1;
+  height: 100px;
+}
+.menu-background .menu-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+.menu-background .menu-content .menu-text h3 {
+  font-size: 23px;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.815);
+  text-align: center;
+  margin-bottom: 20px;
+}
+.menu-background .menu-content .menu-text h1 {
+  margin-bottom: 50px;
+  color: #fff;
+  font-size: 30px;
+}
+
 .grid-section {
   height: auto;
   background: #00001e;
