--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap');
 
+$primary-color:#fff;
+
 *{
     padding: 0;
     margin: 0;
