--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap");
+.menuboard-section {
+  height: auto;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  background: #00001e;
+}
+.menuboard-section .menuboard-section-top .menuboard-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5em;
+}
+.menuboard-section .menuboard-section-top .menuboard-content a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.747);
+  font-weight: 600;
+  text-transform: uppercase;
+  transition: all 0.4s ease-in-out;
+}
+.menuboard-section .menuboard-section-top .menuboard-content a:hover {
+  color: #fff;
+  text-decoration: underline;
+  transform: translateY(-5px);
+}
+.menuboard-section .menuboard-section-top .menuboard-content #main {
+  color: #fff;
+  text-decoration: underline;
+}
+
 .menu-background {
   background: url(../image/menu.jpg);
   height: auto;
