update on menubord card section

--- a/css/_about.scss
+++ b/css/_about.scss
@@ -17,6 +17,7 @@ $btn-color:rgba(0, 0, 255, 0.5);
     background-position: center;
     background-size: cover;
     position: relative;
+    background-attachment: fixed;
 
     .navbar{
     height: 70px;
