--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -16,6 +16,7 @@ $color: rgba(255, 255, 255, 0.815);
     position: relative;
     z-index: 1;
     padding-top: 160px;
+    background-attachment: fixed;
    
     &::after{
         content: '';
