--- a/css/_menuboard.scss
+++ b/css/_menuboard.scss
@@ -1,9 +1,22 @@
+$colors:(
+     primary:#fff,
+     secondaryL:#ccc,
+     thirdly:blue
+);
+
 @mixin flex-box-b {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 @mixin box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
+
+@mixin box-c {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,28 +29,98 @@
   padding-bottom: 100px;
   background: #00001e;
 
-.menuboard-section-top{
-    .menuboard-content{
-       @include box();
-       a{
+  .menuboard-section-top {
+    .menuboard-content {
+      @include box();
+      a {
         text-decoration: none;
         color: rgba(255, 255, 255, 0.747);
         font-weight: 600;
         text-transform: uppercase;
         transition: all 0.4s ease-in-out;
-        &:hover{
-            color: #fff;
-            text-decoration: underline;
-        transform: translateY(-5px);
+        &:hover {
+          color: #fff;
+          text-decoration: underline;
+          transform: translateY(-5px);
         }
-       }
-                #main {
-                    color: #fff;
-                    text-decoration: underline;
-                }
-
+      }
+      #main {
+        color: #fff;
+        text-decoration: underline;
+      }
     }
-}
+  }
+
+.menuboard-section-down{
+  @include flex-box-b();
+  padding-top: 50px;
+
+  .menubord-flexbox{
+     @include box();
+   
+     .menuboard-card{
+      height: 200px;
+      width: 200px;
+      padding: 20px;
+      margin-bottom: -20px;
+      // background: map-get($colors, primary );
+      text-align: center;
+      transition: all 0.4s ease-in-out;
+          
+      img{
+        height: 140px;
+        border-radius: 50%;
+      transition: all 8s ease-in-out;
+          // animation: 10s linear infinite spin !important;
+   
+     }
+             &:hover img {
+                 transform: rotate(300deg);
+               }
+
+               h2{
+                color: #fff;
+                font-size: 20px;
+                font-weight: 600;
+                margin-top: 20px;
+                text-transform: capitalize;
+                cursor: pointer;
+                &:hover{
+                  color: rgba(0, 0, 255, 0.664);
+                }
+               }
+
+               p{
+                color: rgba(255, 255, 255, 0.623);
+                font-weight: 600;
+                font-size: 15px;
+                margin-top: 10px;
+                line-height: 1.3;
+               }
+     h4{
+         color: rgba(0, 0, 255, 0.664);
+         margin-top: 10px;
+     }
+      }
+       
+       }
+
+
+     }
+
+
+      }
+
+
+
+
+     
+
+
+
+
+
+  
 
 
 
@@ -48,4 +131,9 @@
 
 
 
-}
+
+
+
+
+
+
