--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1.5em;
 }
 .menuboard-section .menuboard-section-top .menuboard-content a {
   text-decoration: none;
@@ -27,6 +26,55 @@
   color: #fff;
   text-decoration: underline;
 }
+.menuboard-section .menuboard-section-down {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
+}
+.menuboard-section .menuboard-section-down .menubord-flexbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menuboard-section .menuboard-section-down .menubord-flexbox .menuboard-card {
+  height: 200px;
+  width: 200px;
+  padding: 20px;
+  margin-bottom: -20px;
+  text-align: center;
+  transition: all 0.4s ease-in-out;
+}
+.menuboard-section .menuboard-section-down .menubord-flexbox .menuboard-card img {
+  height: 140px;
+  border-radius: 50%;
+  transition: all 8s ease-in-out;
+}
+.menuboard-section .menuboard-section-down .menubord-flexbox .menuboard-card:hover img {
+  transform: rotate(300deg);
+}
+.menuboard-section .menuboard-section-down .menubord-flexbox .menuboard-card h2 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 20px;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+.menuboard-section .menuboard-section-down .menubord-flexbox .menuboard-card h2:hover {
+  color: rgba(0, 0, 255, 0.664);
+}
+.menuboard-section .menuboard-section-down .menubord-flexbox .menuboard-card p {
+  color: rgba(255, 255, 255, 0.623);
+  font-weight: 600;
+  font-size: 15px;
+  margin-top: 10px;
+  line-height: 1.3;
+}
+.menuboard-section .menuboard-section-down .menubord-flexbox .menuboard-card h4 {
+  color: rgba(0, 0, 255, 0.664);
+  margin-top: 10px;
+}
 
 .menu-background {
   background: url(../image/menu.jpg);
@@ -37,6 +85,7 @@
   position: relative;
   z-index: 1;
   padding-top: 160px;
+  background-attachment: fixed;
 }
 .menu-background::after {
   content: "";
@@ -199,6 +248,7 @@
   background-position: center;
   background-size: cover;
   position: relative;
+  background-attachment: fixed;
 }
 .top-section .navbar {
   height: 70px;
