menuboard upadatr finisd

--- a/css/_menuboard.scss
+++ b/css/_menuboard.scss
@@ -1,7 +1,7 @@
-$colors:(
-     primary:#fff,
-     secondaryL:#ccc,
-     thirdly:blue
+$colors: (
+  primary: #fff,
+  secondaryL: #ccc,
+  thirdly: blue,
 );
 
 @mixin flex-box-b {
@@ -13,7 +13,6 @@ $colors:(
   display: flex;
   align-items: center;
   justify-content: center;
- 
 }
 
 @mixin box-c {
@@ -26,12 +25,13 @@ $colors:(
 .menuboard-section {
   height: auto;
   padding-top: 50px;
-  padding-bottom: 100px;
+  padding-bottom: 200px;
   background: #00001e;
 
   .menuboard-section-top {
     .menuboard-content {
       @include box();
+      gap: 2em;
       a {
         text-decoration: none;
         color: rgba(255, 255, 255, 0.747);
@@ -51,89 +51,61 @@ $colors:(
     }
   }
 
-.menuboard-section-down{
-  @include flex-box-b();
-  padding-top: 50px;
+  .menuboard-section-down {
+    @include flex-box-b();
+    padding-top: 100px;
 
-  .menubord-flexbox{
-     @include box();
-   
-     .menuboard-card{
-      height: 200px;
-      width: 200px;
-      padding: 20px;
-      margin-bottom: -20px;
-      // background: map-get($colors, primary );
-      text-align: center;
-      transition: all 0.4s ease-in-out;
-          
-      img{
-        height: 140px;
-        border-radius: 50%;
-      transition: all 8s ease-in-out;
+    .menubord-flexbox {
+      @include box();
+
+
+      .menuboard-card {
+        height: 200px;
+        width: 200px;
+        padding: 20px;
+        margin-bottom: -20px;
+        // background: map-get($colors, primary );
+        text-align: center;
+        transition: all 0.4s ease-in-out;
+
+        img {
+          height: 140px;
+          border-radius: 50%;
+          transition: all 3s ease-in-out;
           // animation: 10s linear infinite spin !important;
-   
-     }
-             &:hover img {
-                 transform: rotate(300deg);
-               }
+        }
+        &:hover img {
+          transform: rotate(300deg);
+        }
 
-               h2{
-                color: #fff;
-                font-size: 20px;
-                font-weight: 600;
-                margin-top: 20px;
-                text-transform: capitalize;
-                cursor: pointer;
-                &:hover{
-                  color: rgba(0, 0, 255, 0.664);
-                }
-               }
+        h2 {
+          color: #fff;
+          font-size: 20px;
+          font-weight: 600;
+          margin-top: 20px;
+          text-transform: capitalize;
+          cursor: pointer;
+          &:hover {
+            color: rgba(0, 0, 255, 0.664);
+          }
+        }
 
-               p{
-                color: rgba(255, 255, 255, 0.623);
-                font-weight: 600;
-                font-size: 15px;
-                margin-top: 10px;
-                line-height: 1.3;
-               }
-     h4{
-         color: rgba(0, 0, 255, 0.664);
-         margin-top: 10px;
-     }
+        p {
+          color: rgba(255, 255, 255, 0.623);
+          font-weight: 600;
+          font-size: 15px;
+          margin-top: 10px;
+          line-height: 1.3;
+        }
+        h4 {
+          color: rgba(0, 0, 255, 0.664);
+          margin-top: 10px;
+        }
       }
-       
-       }
+    }
+  }
 
 
-     }
+ 
 
-
-      }
-
-
-
-
-     
-
-
-
-
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
